--- a/firebase.json
+++ b/firebase.json
@@ -4,10 +4,15 @@
   },
   "hosting": {
     "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "**",
-        "destination": "/index.html"
+        "function": "ssrapp"
       }
     ]
   }
