--- a/functions/package.json
+++ b/functions/package.json
@@ -2,8 +2,36 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
-    "firebase-admin": "~4.2.1",
-    "firebase-functions": "^0.5.7"
+    "@agm/core": "^1.0.0-beta.1",
+    "@angular/animations": "^4.4.3",
+    "@angular/common": "^4.4.3",
+    "@angular/compiler": "^4.4.3",
+    "@angular/core": "^4.4.3",
+    "@angular/forms": "^4.4.3",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.4.3",
+    "@angular/router": "^4.0.0",
+    "angular-bootstrap-md": "^4.3.5",
+    "angular-universal-express-firebase": "0.0.4",
+    "angularfire2": "^4.0.0-rc.2",
+    "bootstrap": "^4.0.0-beta",
+    "chart.js": "^2.7.0",
+    "core-js": "^2.4.1",
+    "express": "^4.15.4",
+    "firebase": "^4.3.0",
+    "firebase-admin": "^5.1.0",
+    "firebase-functions": "^0.6.1",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5",
+    "rxjs": "^5.4.1",
+    "zone.js": "^0.8.14"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "angular-universal-express-firebase": "0.0.4"
+  }
 }
