--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.4.3",
     "@angular/router": "^4.0.0",
     "angular-bootstrap-md": "^4.3.5",
     "angularfire2": "^4.0.0-rc.2",
     "bootstrap": "^4.0.0-beta",
-    "chart.js": "^2.5.0",
+    "chart.js": "^2.7.0",
     "core-js": "^2.4.1",
     "firebase": "^4.3.0",
     "font-awesome": "^4.7.0",
@@ -42,7 +43,11 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "angular-universal-express-firebase": "0.0.4",
     "codelyzer": "~3.0.1",
+    "express": "^4.15.4",
+    "firebase-admin": "^4.2.1",
+    "firebase-functions": "^0.5.9",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
