update(firebase): add 10 day cache-control header

--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,13 @@
         "source": "**",
         "destination": "/index.html"
       }
-    ]
+    ],
+    "headers": [{
+      "source": "**/*.@(css|jpg|jpeg|png|gif|js|ico|woff)",
+      "headers": [{
+        "key": "Cache-Control",
+        "value": "max-age=864000"
+      }]
+    }]
   }
 }
