--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
+    "css-loader": "^0.28.7",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -53,6 +54,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass": "^4.5.3",
     "protractor": "~5.1.2",
+    "style-loader": "^0.19.0",
     "sw-precache": "^5.2.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "ts-node": "~3.0.4",
