--- a/firebase.json
+++ b/firebase.json
@@ -4,17 +4,21 @@
   },
   "hosting": {
     "public": "dist",
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ],
+    "rewrites": [{
+      "source": "**",
+      "destination": "/index.html"
+    }],
     "headers": [{
       "source": "**/*.@(css|jpg|jpeg|png|gif|js|ico|woff)",
       "headers": [{
         "key": "Cache-Control",
         "value": "max-age=864000"
+      }]
+    },{
+      "source": "service-worker.js",
+      "headers": [{
+        "key": "Cache-Control",
+        "value": "max-age=0"
       }]
     }]
   }
