--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@angular/router": "^4.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^0.5.3",
     "angular-bootstrap-md": "^4.3.5",
-    "angularfire2": "^5.0.0-rc.3",
+    "angularfire2": "5.0.0-rc.3",
     "bootstrap": "^4.0.0-beta",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
@@ -39,7 +39,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.3",
+    "@angular/cli": "^1.6.8",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
