--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "DevFest City",
-  "short_name": "DevFest City",
+  "name": "DevFest Los Angeles",
+  "short_name": "DevFest Los Angeles",
   "theme_color": "#4285F4",
   "background_color": "#eeeeee",
   "display": "standalone",
