--- a/package.json
+++ b/package.json
@@ -14,40 +14,39 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.1",
-    "@angular/animations": "^6.1.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "@nicky-lenaers/ngx-scroll-to": "^1.0.0",
-    "angular-bootstrap-md": "^6.2.1",
-    "angularfire2": "5.0.0-rc.3",
+    "@angular/animations": "^9.1.13",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/fire": "^6.0.4",
+    "@angular/forms": "^9.1.13",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
+    "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
+    "angular-bootstrap-md": "^8.10.1",
     "bootstrap": "^4.0.0-beta",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
-    "firebase": "4.6.0",
+    "firebase": "^8.10.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.5",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
-    "zone.js": "^0.8.26"
+    "tslib": "^2.4.1",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "^6.1.1",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
+    "@angular-devkit/build-angular": "^0.901.15",
+    "@angular/cli": "^9.1.15",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "^4.4.2",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -62,6 +61,6 @@
     "sw-precache-webpack-plugin": "^0.11.4",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.9.2"
+    "typescript": "3.8.3"
   }
 }
